--- a/.github/workflows/electron-pr.yml
+++ b/.github/workflows/electron-pr.yml
@@ -58,8 +58,7 @@ jobs:
           VERSION=$(node ./packages/ci-actions/bin/get-next-package-version.js --package-json ./packages/desktop-electron/package.json --type nightly)
           sed -i "s/%RELEASE_VERSION%/$VERSION/g; s/%RELEASE_DATE%/$TODAY/g" "$METAINFO_FILE"
           sudo apt-get install appstream
-          appstreamcli --version
-          appstreamcli validate "$METAINFO_FILE"
+          flatpak run --command=flatpak-builder-lint org.flatpak.Builder appstream "$METAINFO_FILE"
       - name: Set up environment
         uses: ./.github/actions/setup
       - name: Build Electron
