--- a/packages/loot-core/package.json
+++ b/packages/loot-core/package.json
@@ -64,7 +64,7 @@
     "generate:db-migrations": "drizzle-kit generate --config=drizzle.config.ts $@ && node ./bin/compile-drizzle-migrations.mjs"
   },
   "dependencies": {
-    "@electric-sql/pglite": "^0.2.17",
+    "@electric-sql/pglite": "^0.3.14",
     "@jlongster/sql.js": "^1.6.7",
     "@reduxjs/toolkit": "^2.10.1",
     "@rschedule/core": "^1.5.0",
@@ -77,7 +77,7 @@
     "csv-stringify": "^6.6.0",
     "date-fns": "^4.1.0",
     "deep-equal": "^2.2.3",
-    "drizzle-orm": "^0.41.0",
+    "drizzle-orm": "^0.45.1",
     "handlebars": "^4.7.8",
     "lru-cache": "^11.2.2",
     "md5": "^2.3.0",
@@ -102,6 +102,7 @@
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "cross-env": "^10.1.0",
+    "drizzle-kit": "^0.31.8",
     "fake-indexeddb": "^6.2.5",
     "fast-check": "4.3.0",
     "i18next": "^25.6.2",
