Phase 2: Add payee location API/services
  * Add constants for default location behavior
  * Implement location service with geolocation adapters
  * Add new API handlers for payee location operations

--- a/packages/loot-core/package.json
+++ b/packages/loot-core/package.json
@@ -46,6 +46,10 @@
     "./platform/server/sqlite": "./src/platform/server/sqlite/index.web.ts",
     "./server/budget/types/*": "./src/server/budget/types/*.d.ts",
     "./server/*": "./src/server/*.ts",
+    "./shared/location": {
+      "node": "./src/shared/location.electron.ts",
+      "default": "./src/shared/location.web.ts"
+    },
     "./shared/*": "./src/shared/*.ts",
     "./types/models": "./src/types/models/index.d.ts",
     "./types/*": "./src/types/*.d.ts",
