update baseline-browser-mapping (#6647)
* update baseline-browser-mapping

* note

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@octokit/rest": "^22.0.1",
     "@types/node": "^22.19.3",
     "@types/prompts": "^2.4.9",
+    "baseline-browser-mapping": "^2.9.14",
     "cross-env": "^10.1.0",
     "eslint": "^9.39.2",
     "eslint-plugin-perfectionist": "^4.15.1",
