fix: resolve CI errors - typecheck, lint, and build issues
- Fix import setReport → setSessionReport in ReportSidebar.tsx
- Add enablebanking to syncSourceReadable in MobileBankSyncPage.tsx
- Fix import ordering in jwt.ts and app.ts
- Fix unused catch parameter in enablebanking-services.ts
- Add default cases to switch statements
- Fix untranslated strings in EnableBankingSetupAccountModal.tsx

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,3 +4,4 @@ services:
     volumes:
       - ..:/workspaces:cached
     command: /bin/sh -c "while sleep 1000; do :; done"
+    network_mode: host
