Refactor: extract tooltip components and clean up lint suppressions
Extract CustomTooltip components from CrossoverGraph and NetWorthGraph
to module level to fix unstable nested components lint warnings. Also
consolidate theme file lint rule into oxlintrc.json and add proper
typing to styles object.

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -416,6 +416,12 @@
         "typescript-paths/absolute-import": ["error", { "enableAlias": false }]
       }
     },
+    {
+      "files": ["packages/desktop-client/src/style/themes/*"],
+      "rules": {
+        "eslint/no-restricted-imports": "off"
+      }
+    },
     // TODO: enable these
     {
       "files": [
