--- a/.github/workflows/edge-release.yml
+++ b/.github/workflows/edge-release.yml
@@ -18,29 +18,22 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build-and-deploy:
+  republish-latest-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Repository Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-        with:
-          ref: master
-
-      - name: Set up environment
-        uses: ./.github/actions/setup
-
-      - name: Install Netlify
+      - name: Install Netlify CLI
         run: npm install netlify-cli@17.10.1 -g
 
-      - name: Build Actual
-        run: yarn build:browser
-
-      - name: Deploy to Netlify Edge
-        id: netlify_deploy
+      - name: Get Latest Deploy ID
+        id: get_deploy
         run: |
-          netlify deploy \
-            --dir packages/desktop-client/build \
-            --site ${{ secrets.NETLIFY_EDGE_SITE_ID }} \
-            --auth ${{ secrets.NETLIFY_API_TOKEN }} \
-            --filter @actual-app/web \
-            --prod
+          DEPLOY_ID=$(netlify api listSiteDeploys --data '{ "site_id": "${{ secrets.NETLIFY_EDGE_SITE_ID }}", "production": true, "state": "ready", "branch": "master", "per_page": 1 }' | jq -r '.[0].id')
+          echo "deploy_id=$DEPLOY_ID" >> $GITHUB_OUTPUT
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_API_TOKEN }}
+
+      - name: Restore and Publish Deploy
+        run: |
+          netlify api restoreSiteDeploy --data '{ "site_id": "${{ secrets.NETLIFY_EDGE_SITE_ID }}", "deploy_id": "${{ steps.get_deploy.outputs.deploy_id }}" }'
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_API_TOKEN }}
