--- a/.github/workflows/publish-nightly-npm-packages.yml
+++ b/.github/workflows/publish-nightly-npm-packages.yml
@@ -1,9 +1,9 @@
 name: Publish nightly npm packages
 
-# Nightly npm packages are built daily at 11PM UTC
+# Nightly npm packages are built daily at midnight UTC
 on:
   schedule:
-    - cron: '0 23 * * *'
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
