Fix nightly edge not scheduling (#6775)
* fix nightly edge not scheduling

* changing to 11PM UTC

* clarifying comment

* better diff

--- a/.github/workflows/publish-nightly-edge.yml
+++ b/.github/workflows/publish-nightly-edge.yml
@@ -1,9 +1,9 @@
 name: Deploy nightly Edge
 
-# Publish nightly version of Edge - Runs every day at midnight
+# Publish nightly version of Edge - Runs every day at 23:00 UTC
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 23 * * *'
   workflow_dispatch:
 
 defaults:
@@ -14,7 +14,7 @@ env:
   CI: true
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: nightly-edge-deploy
   cancel-in-progress: false
 
 jobs:
