Update bug report template for import issues
Clarified instructions for reporting import issues.

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -27,7 +27,7 @@ body:
         - What actually happened instead
         - Any error messages (copy/paste the exact text)
 
-        Please include a (redacted) version of the file, and a screenshot of the import screen. You may need to zip it before uploading.
+        If you're reporting an issue with imports, please include a (redacted) version of the file, and a screenshot of the import screen. You may need to zip it before uploading.
       placeholder: |
         I was trying to [action] when [context].
         Expected: [expected behavior]
