--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,25 +10,26 @@
   "main": "dist/index.js",
   "types": "@types/index.d.ts",
   "scripts": {
-    "build:app": "yarn workspace loot-core build:api",
     "build:crdt": "yarn workspace @actual-app/crdt build",
     "build:node": "tsc --p tsconfig.dist.json && tsc-alias -p tsconfig.dist.json",
     "build:migrations": "cp migrations/*.sql dist/migrations",
     "build:default-db": "cp default-db.sqlite dist/",
-    "build": "yarn run clean && yarn run build:app && yarn run build:node && yarn run build:migrations && yarn run build:default-db",
-    "test": "yarn run clean && yarn run build:app && yarn run build:crdt && vitest --run",
+    "build": "yarn run clean && yarn run build:node && yarn run build:migrations && yarn run build:default-db",
+    "test": "yarn run clean && yarn run build:crdt && vitest --run",
     "clean": "rm -rf dist @types"
   },
   "dependencies": {
     "@actual-app/crdt": "workspace:^",
     "better-sqlite3": "^12.5.0",
     "compare-versions": "^6.1.1",
+    "loot-core": "workspace:^",
     "node-fetch": "^3.3.2",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
     "tsc-alias": "^1.8.16",
     "typescript": "^5.9.3",
+    "vite-plugin-peggy-loader": "^2.0.1",
     "vitest": "^4.0.16"
   },
   "engines": {
