--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,12 +7,11 @@
     "@types",
     "dist"
   ],
-  "main": "dist/api/index.js",
+  "main": "dist/index.js",
   "types": "@types/api/index.d.ts",
   "scripts": {
     "build:crdt": "yarn workspace @actual-app/crdt build",
-    "build:node": "tsc --p tsconfig.dist.json && tsc-alias -p tsconfig.dist.json",
-    "build": "yarn run clean && yarn run build:node",
+    "build": "yarn run clean && vite build && tsc -p tsconfig.dist.json --emitDeclarationOnly",
     "test": "yarn run clean && yarn run build:crdt && vitest --run",
     "clean": "rm -rf dist @types"
   },
@@ -22,11 +21,12 @@
     "compare-versions": "^6.1.1",
     "loot-core": "workspace:^",
     "node-fetch": "^3.3.2",
+    "rollup-plugin-visualizer": "^6.0.5",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "tsc-alias": "^1.8.16",
     "typescript": "^5.9.3",
+    "vite": "^7.3.1",
     "vite-plugin-peggy-loader": "^2.0.1",
     "vitest": "^4.0.16"
   },
