--- a/.github/workflows/storybook-release.yml
+++ b/.github/workflows/storybook-release.yml
@@ -32,9 +32,9 @@ jobs:
           path: 'packages/component-library/storybook-static'
 
       - name: Deploy to external repo
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          deploy_key: ${{ secrets.STORYBOOK_GITHUB_PAGES_DEPLOY }}
+          personal_token: ${{ secrets.STORYBOOK_GITHUB_PAGES_DEPLOY }}
           external_repository: actualbudget/design.actualbudget.org
           publish_branch: main
           publish_dir: packages/component-library/storybook-static
