Move redux state to react-query - payees states

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,7 +56,8 @@
     "**/lib-dist/*",
     "**/test-results/*",
     "**/playwright-report/*",
-    "**/service-worker/*"
+    "**/service-worker/*",
+    "packages/docs/**/*"
   ],
   "ts-node": {
     "compilerOptions": {
