--- a/packages/sync-server/package.json
+++ b/packages/sync-server/package.json
@@ -41,6 +41,7 @@
     "express-winston": "^4.2.0",
     "ipaddr.js": "^2.3.0",
     "jws": "^4.0.1",
+    "loot-core": "workspace:*",
     "migrate": "^2.1.0",
     "nordigen-node": "^1.4.1",
     "openid-client": "^5.7.1",
