fix(sync): normalize bank amount parsing and balance scaling
Coerce GoCardless string amounts to numbers before integer conversion and guard
against missing balances to prevent NaN and undefined access in bank sync flows.
Align starting-balance calculations to a single current-balance decimal scale
across bank integrations, and respect hideFraction in integer currency formatting.
Reduce published sync-server package size by removing duplicate build layout and
copying SQL assets only to the flattened build path.

--- a/packages/sync-server/package.json
+++ b/packages/sync-server/package.json
@@ -17,8 +17,8 @@
     "start-monitor": "nodemon --exec 'yarn build && node build/app' --ignore './build/**/*' --ext 'ts,js' build/app",
     "build": "tsc && yarn add-import-extensions && yarn normalize-build-layout && yarn copy-static-assets",
     "add-import-extensions": "node bin/add-import-extensions.mjs",
-    "normalize-build-layout": "mkdir -p build/bin build/src && cp -f build/sync-server/bin/actual-server.js build/bin/actual-server.js && cp -f build/sync-server/app.js build/app.js && cp -rf build/sync-server/src/* build/src/",
-    "copy-static-assets": "rm -rf build/src/sql build/sync-server/src/sql && mkdir -p build/src build/sync-server/src && cp -r src/sql build/src/sql && cp -r src/sql build/sync-server/src/sql",
+    "normalize-build-layout": "mkdir -p build/bin build/src && cp -f build/sync-server/bin/actual-server.js build/bin/actual-server.js && cp -f build/sync-server/app.js build/app.js && cp -rf build/sync-server/src/* build/src/ && rm -rf build/sync-server",
+    "copy-static-assets": "rm -rf build/src/sql && mkdir -p build/src && cp -r src/sql build/src/sql",
     "test": "NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules --import ./register-loader.mjs --trace-warnings' vitest --run",
     "db:migrate": "yarn build && cross-env NODE_ENV=development node build/src/scripts/run-migrations.js up",
     "db:downgrade": "yarn build && cross-env NODE_ENV=development node build/src/scripts/run-migrations.js down",
