feat: Add comprehensive tests and improvements to Enable Banking
- Add 4 test suites (735+ lines):
  * admin-endpoints.spec.ts - Admin functionality tests
  * bank-processors.spec.ts - Bank processor tests
  * bank-registry.spec.ts - Bank registry tests
  * session-store.spec.ts - Session management tests

- Add clearAllSessions admin feature with audit logging
- Refine bank processors (ABN AMRO, Rabobank, Danish banks)
- Improve error handling and type safety
- Modernize imports (inline type syntax)
- Add session store clear() method

Tests cover:
- Session lifecycle management
- Bank processor behavior
- Admin operations
- Error scenarios
- Authentication flows

--- a/packages/sync-server/package.json
+++ b/packages/sync-server/package.json
@@ -46,6 +46,7 @@
     "nordigen-node": "^1.4.1",
     "openapi-fetch": "^0.14.0",
     "openid-client": "^5.7.1",
+    "p-limit": "^7.3.0",
     "pluggy-sdk": "^0.79.0",
     "uuid": "^13.0.0",
     "winston": "^3.19.0"
