--- a/packages/sync-server/tsconfig.json
+++ b/packages/sync-server/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "lib": ["ES2021"],
     "noEmit": false,
-    "outDir": "build",
-    "experimentalDecorators": true
+    "outDir": "build"
   },
   "include": [
     "src/**/*",
